fisket bug (kan ikke bruke tall i klasser...)

--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -146,87 +146,82 @@
     <div class="row skolestart">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/biblioteket.png">
+                <img src="img/undermenySkoleVeien/skolestart/Engelsk.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/billehagen.png">
+                <img src="img/undermenySkoleVeien/skolestart/matte.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/musikkfilm.png">
+                <img src="img/undermenySkoleVeien/skolestart/naturfag.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/TilDeVoksene.png">
-            </div>
-        </div>
-        <div class="large-4 small-6 columns">
-            <div class="align-center">
-                <img src="img/barnehage/trampoline.png">
+                <img src="img/undermenySkoleVeien/skolestart/norsk.png">
             </div>
         </div>
     </div>
     <!--!!!!!!!!!!!!!!!!SKOLESTART FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!1-2. KLASSE FAG!!!!!!!!!!!!!!!!!!!!-->
-    <div class="row 1-2Klasse">
+    <div class="row forste">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/biblioteket.png">
+                <img src="img/undermenySkoleVeien/forste/Engelsk.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/billehagen.png">
+                <img src="img/undermenySkoleVeien/forste/naturfag.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/musikkfilm.png">
+                <img src="img/undermenySkoleVeien/forste/norsk.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/TilDeVoksene.png">
+                <img src="img/undermenySkoleVeien/forste/RLE.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/trampoline.png">
+                <img src="img/undermenySkoleVeien/forste/sammfunn.png">
             </div>
         </div>
     </div>
     <!--!!!!!!!!!!!!!!!!1-2. KLASSE FAG SLUTT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!3-4. KLASSE FAG!!!!!!!!!!!!!!!!!!!!-->
-    <div class="row 3-4Klasse">
+    <div class="row andre">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/biblioteket.png">
+                <img src="img/undermenySkoleVeien/andre/Engelsk.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/billehagen.png">
+                <img src="img/undermenySkoleVeien/andre/naturfag.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/musikkfilm.png">
+                <img src="img/undermenySkoleVeien/andre/norsk.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/TilDeVoksene.png">
+                <img src="img/undermenySkoleVeien/andre/RLE.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/trampoline.png">
+                <img src="img/undermenySkoleVeien/andre/sammfunn.png">
             </div>
         </div>
     </div>
@@ -236,27 +231,42 @@
     <div class="row morsmaal">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/biblioteket.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Filippinsk.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/billehagen.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Litausk.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/musikkfilm.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Polsk.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/TilDeVoksene.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Somali.png">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/trampoline.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Tamil.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/undermenySkoleVeien/morsmaal/Tiginja.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/undermenySkoleVeien/morsmaal/Tyrkisk.png">
+            </div>
+        </div>
+        <div class="large-4 small-6 columns">
+            <div class="align-center">
+                <img src="img/undermenySkoleVeien/morsmaal/TilLæreren.png">
             </div>
         </div>
     </div>
