lagt til alt="" på flere bilder på barnForside. fjernet skrivefeil i stylesheet for barn

--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -18,7 +18,7 @@
         <nav class="top-bar" data-topbar role="navigation">
             <ul class="title-area">
                 <li class="name">
-                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
+                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
                 </li>
                 <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
                 <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
@@ -45,22 +45,22 @@
             <div class="row">
                 <div id="barnehageButton" class="large-3 medium-6 columns">
                     <div class="menu-option">
-                        <img src="img/barnehage.png">
+                        <img src="img/barnehage.png" alt="barnehage meny">
                     </div>
                 </div>
                 <div id="skoleveienButton" class="large-3 medium-6 columns">
                     <div class="menu-option">
-                        <img src="img/Skoleveien.png">
+                        <img src="img/Skoleveien.png" alt="skoleveien meny">
                     </div>
                 </div>
                 <div id="kanalSButton" class="large-3 medium-6 columns">
                     <div class="menu-option">
-                        <img src="img/kanalS.png">
+                        <img src="img/kanalS.png" alt="kanalS meny">
                     </div>
                 </div>
                 <div id="MFLButton" class="large-3 medium-6 columns">
                     <div class="menu-option">
-                        <img src="img/MFL.png">
+                        <img src="img/MFL.png" alt="MFL meny">
                     </div>
                 </div>
             </div>
@@ -75,33 +75,33 @@
     <!-- mobil meny -->
     <div id="barnehageButtonMobil" class="small-12 columns">
         <div class="menu-option">
-            <img src="img/barnehage.png">
+            <img src="img/barnehage.png" alt="barnehage meny">
         </div>
     </div>
     <div class="row barnehage">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/biblioteket.png">
+                <img src="img/barnehage/biblioteket.png" alt="bibliotek fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/billehagen.png">
+                <img src="img/barnehage/billehagen.png" alt="billehagen fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/musikkfilm.png">
+                <img src="img/barnehage/musikkfilm.png" alt="mysikkfilm fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/TilDeVoksene.png">
+                <img src="img/barnehage/TilDeVoksene.png" alt="til de voksene fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/trampoline.png">
+                <img src="img/barnehage/trampoline.png" alt"trampoline">
             </div>
         </div>
     </div>
@@ -111,7 +111,7 @@
     <!-- mobil meny -->
     <div id="skoleveienButtonMobil" class="small-12 columns">
         <div class="menu-option">
-            <img src="img/Skoleveien.png">
+            <img src="img/Skoleveien.png" alt="skoleveien meny">
         </div>
     </div>
     <div class="row menu" id="skoleveienMenu">
@@ -119,22 +119,22 @@
             <div class="row">
                 <div id="barnehageButton" class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
-                        <img src="img/undermenySkoleVeien/forste.png">
+                        <img src="img/undermenySkoleVeien/forste.png" alt="1-2 klasse meny">
                     </div>
                 </div>
                 <div id="skoleveienButton" class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
-                        <img src="img/undermenySkoleVeien/andre.png">
+                        <img src="img/undermenySkoleVeien/andre.png" alt="3-4 klasse meny">
                     </div>
                 </div>
                 <div id="kanalSButton" class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
-                        <img src="img/undermenySkoleVeien/morsmal.png">
+                        <img src="img/undermenySkoleVeien/morsmal.png" alt="morsmål meny">
                     </div>
                 </div>
                 <div id="MFLButton" class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
-                        <img src="img/undermenySkoleVeien/skolestart.png">
+                        <img src="img/undermenySkoleVeien/skolestart.png" alt="skolestart meny">
                     </div>
                 </div>
             </div>
@@ -146,22 +146,22 @@
     <div class="row skolestart">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/skolestart/Engelsk.png">
+                <img src="img/undermenySkoleVeien/skolestart/Engelsk.png" alt="engelsk fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/skolestart/matte.png">
+                <img src="img/undermenySkoleVeien/skolestart/matte.png" alt="matte fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/skolestart/naturfag.png">
+                <img src="img/undermenySkoleVeien/skolestart/naturfag.png" alt="naturfag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/skolestart/norsk.png">
+                <img src="img/undermenySkoleVeien/skolestart/norsk.png" alt="norsk fag">
             </div>
         </div>
     </div>
