lagt til flere alt="" på forsiden for barn

--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -171,27 +171,27 @@
     <div class="row forste">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/forste/Engelsk.png">
+                <img src="img/undermenySkoleVeien/forste/Engelsk.png" alt="engelsk fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/forste/naturfag.png">
+                <img src="img/undermenySkoleVeien/forste/naturfag.png" alt="naturfag fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/forste/norsk.png">
+                <img src="img/undermenySkoleVeien/forste/norsk.png" alt="norsk fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/forste/RLE.png">
+                <img src="img/undermenySkoleVeien/forste/RLE.png" alt="RLE fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/forste/sammfunn.png">
+                <img src="img/undermenySkoleVeien/forste/sammfunn.png" alt="samfunnsfag">
             </div>
         </div>
     </div>
@@ -201,27 +201,27 @@
     <div class="row andre">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/andre/Engelsk.png">
+                <img src="img/undermenySkoleVeien/andre/Engelsk.png" alt="engelsk fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/andre/naturfag.png">
+                <img src="img/undermenySkoleVeien/andre/naturfag.png" alt="naturfag fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/andre/norsk.png">
+                <img src="img/undermenySkoleVeien/andre/norsk.png" alt="norsk fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/andre/RLE.png">
+                <img src="img/undermenySkoleVeien/andre/RLE.png" alt="RLE fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/andre/sammfunn.png">
+                <img src="img/undermenySkoleVeien/andre/sammfunn.png" alt="samfunsfag">
             </div>
         </div>
     </div>
@@ -231,42 +231,42 @@
     <div class="row morsmaal">
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/morsmaal/Filippinsk.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Filippinsk.png" alt="Filippinsk">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/morsmaal/Litausk.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Litausk.png" alt="Litausk">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/morsmaal/Polsk.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Polsk.png" alt="Polsk">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/morsmaal/Somali.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Somali.png" alt="Somali">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/morsmaal/Tamil.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Tamil.png" alt="Tamil">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/morsmaal/Tiginja.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Tiginja.png" alt="Tiginja">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/morsmaal/Tyrkisk.png">
+                <img src="img/undermenySkoleVeien/morsmaal/Tyrkisk.png" alt="Tyrkisk">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/undermenySkoleVeien/morsmaal/TilLæreren.png">
+                <img src="img/undermenySkoleVeien/morsmaal/TilLæreren.png" alt="Til Læreren">
             </div>
         </div>
     </div>
