lagt til alt="" på alle bildeelmenter, endret "id" på barnehageButton, skoleveienButton, kanalSButton og MFLButton til klasser. lukket divisjon å footeren som var åpen.

--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -43,22 +43,22 @@
     <div class="row menu">
         <div class="large-12 columns">
             <div class="row">
-                <div id="barnehageButton" class="large-3 medium-6 columns">
+                <div class="large-3 medium-6 columns barnehageButton">
                     <div class="menu-option">
                         <img src="img/barnehage.png" alt="barnehage meny">
                     </div>
                 </div>
-                <div id="skoleveienButton" class="large-3 medium-6 columns">
+                <div class="large-3 medium-6 columns skoleveienButton">
                     <div class="menu-option">
                         <img src="img/Skoleveien.png" alt="skoleveien meny">
                     </div>
                 </div>
-                <div id="kanalSButton" class="large-3 medium-6 columns">
+                <div class="large-3 medium-6 columns kanalSButton">
                     <div class="menu-option">
                         <img src="img/kanalS.png" alt="kanalS meny">
                     </div>
                 </div>
-                <div id="MFLButton" class="large-3 medium-6 columns">
+                <div class="large-3 medium-6 columns MFLButton">
                     <div class="menu-option">
                         <img src="img/MFL.png" alt="MFL meny">
                     </div>
@@ -101,7 +101,7 @@
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/trampoline.png" alt"trampoline">
+                <img src="img/barnehage/trampoline.png" alt="trampoline">
             </div>
         </div>
     </div>
@@ -117,22 +117,22 @@
     <div class="row menu" id="skoleveienMenu">
         <div class="large-12 columns">
             <div class="row">
-                <div id="barnehageButton" class="large-3 medium-6 small-6 columns">
+                <div class="large-3 medium-6 small-6 columns barnehageButton">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/forste.png" alt="1-2 klasse meny">
                     </div>
                 </div>
-                <div id="skoleveienButton" class="large-3 medium-6 small-6 columns">
+                <div class="large-3 medium-6 small-6 columns skoleveienButton">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/andre.png" alt="3-4 klasse meny">
                     </div>
                 </div>
-                <div id="kanalSButton" class="large-3 medium-6 small-6 columns">
+                <div class="large-3 medium-6 small-6 columns kanalSButton">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/morsmal.png" alt="morsmål meny">
                     </div>
                 </div>
-                <div id="MFLButton" class="large-3 medium-6 small-6 columns">
+                <div class="large-3 medium-6 small-6 columns MFLButton">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/skolestart.png" alt="skolestart meny">
                     </div>
@@ -276,7 +276,7 @@
     <!-- mobil meny -->
     <div id="kanalSButtonMobil" class="small-12 columns">
         <div class="menu-option">
-            <img src="img/kanalS.png">
+            <img src="img/kanalS.png" alt="kanalS meny">
         </div>
     </div>
     <div class="row kanalS">
@@ -284,63 +284,63 @@
             <div class="align-center">
 
                 <a href="RLE_side.html">
-                <img src="img/kanalS/RLE.png">
+                <img src="img/kanalS/RLE.png" alt="RLE fag">
                 </a>
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/sammfunn.png">
+                <img src="img/kanalS/sammfunn.png" alt="samfunnsfag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/grunnlovsjub.png">
+                <img src="img/kanalS/grunnlovsjub.png" alt="grunnlovs jubeleums fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/historieNorge.png">
+                <img src="img/kanalS/historieNorge.png" alt="norgeshistorie fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/historieEuropa.png">
+                <img src="img/kanalS/historieEuropa.png" alt="historie om europa fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/kunst.png">
+                <img src="img/kanalS/kunst.png" alt="kunst fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/matOghelse.png">
+                <img src="img/kanalS/matOghelse.png" alt="mat og helse fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/matte.png">
+                <img src="img/kanalS/matte.png" alt="matte fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/naturfag.png">
+                <img src="img/kanalS/naturfag.png" alt="naturfag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/norsk.png">
+                <img src="img/kanalS/norsk.png" alt="norsk fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/Engelsk.png">
+                <img src="img/kanalS/Engelsk.png" alt="engelsk fag">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/kanalS/sammfunn.png">
+                <img src="img/kanalS/sammfunn.png" alt="samfunnsfag">
             </div>
         </div>
     </div>
@@ -350,23 +350,23 @@
     <!-- mobil meny -->
     <div id="MFLButtonMobil" class="small-12 columns">
         <div class="menu-option">
-            <img src="img/MFL.png">
+            <img src="img/MFL.png" alt="MFL meny">
         </div>
     </div>
     <div class="row MFL">
         <div class="large-4 small-12 columns">
             <div class="align-center">
-                <img src="img/mfl/mflbarnehage.png">
+                <img src="img/mfl/mflbarnehage.png" alt="barnehage fag">
             </div>
         </div>
         <div class="large-4 small-12 columns">
             <div class="align-center">
-                <img src="img/mfl/mflmatematikk.png">
+                <img src="img/mfl/mflmatematikk.png" alt="matematikk fag">
             </div>
         </div>
         <div class="large-4 small-12 columns">
             <div class="align-center">
-                <img src="img/mfl/mflnaturfag.png">
+                <img src="img/mfl/mflnaturfag.png" alt="naturfag">
             </div>
         </div>
     </div>
@@ -382,7 +382,7 @@
     <!-- salaby logo -->
     <footer id="footer" class="large-12 columns">
         <div id="footerLogo" class="large-4 columns">
-            <img src="img/logos/salaby_logo_enkel_grå.png">
+            <img src="img/logos/salaby_logo_enkel_grå.png" alt="footer logo">
         </div>
         <!-- lenker i midten -->
         <div id="footerMid" class="large-6 columns">
@@ -398,11 +398,12 @@
         <!-- sosiale medier -->
         <div id="socialLinks" class="large-2 columns">
             <a href="https://www.facebook.com/salaby">
-                <img src="img/social/facebook_logo.png" />
+                <img src="img/social/facebook_logo.png" alt="facebook logo">
             </a>
             <a href="https://www.youtube.com/user/SalabyGyldendal">
-                <img src="img/social/youtube_logo.png">
+                <img src="img/social/youtube_logo.png" alt="youtube logo">
             </a>
+        </div>
             <a href="#0" class="cd-top">top</a>
         </footer>
     <!--!!!!!!!!!!!!!!!!!!FOOTER SLUTT!!!!!!!!!!!!!!!!!!!!!!-->
