--- a/sprint5/Kode/Foundation/Voksen/kompetanse.html
+++ b/sprint5/Kode/Foundation/Voksen/kompetanse.html
@@ -518,7 +518,7 @@
 
     <!-- FOOTER -->
     <!-- salaby logo -->
-    <div id="footer" class="large-12 columns">
+    <footer  id="footer" class="large-12 columns">
         <div id="footerLogo" class="large-4 columns">
             <img src="img/logos/salaby_logo_enkel_grå.png">
         </div>
@@ -542,7 +542,7 @@
                 <img src="img/social/youtube_logo.png">
             </a>
         </div>
-    </div>
+    </footer>
     <!-- FOOTER SLUTT -->
 
     <script src="js/vendor/jquery.js"></script>
