--- a/sprint5/Kode/Foundation/Voksen/omKanalS.html
+++ b/sprint5/Kode/Foundation/Voksen/omKanalS.html
@@ -99,7 +99,7 @@
         </div>
         <!-- FOOTER -->
         <!-- salaby logo -->
-        <div id="footer" class="large-12 columns">
+        <footer id="footer" class="large-12 columns">
             <div id="footerLogo" class="large-4 columns">
                 <img src="img/logos/salaby_logo_enkel_grå.png">
             </div>
@@ -123,7 +123,7 @@
                     <img src="img/social/youtube_logo.png">
                 </a>
             </div>
-        </div>
+        </footer>
         <!-- FOOTER SLUTT -->
 
         <script src="js/vendor/jquery.js"></script>
