endret klassenavn på SKOLEVEIEN knappene til riktige navn(disse hadde navnene til hovedmenyen)

--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -68,8 +68,7 @@
     </div>
     <!--!!!!!!!!!!!!!!MENY SLUTT!!!!!!!!!!!!!!-->
 
-
-     <!--!!!!!!!!!!!!!!!!! MAIN CONTENT!!!!!!!!!!!!!!!!!!!!-->
+     <!--!!!!!!!!!!!!!!!!MAIN CONTENT!!!!!!!!!!!!!!!!!!!!-->
 
     <!--!!!!!!!!!!!!!!!!!BARNEHAGE FAG!!!!!!!!!!!!!!!!!!!!!!-->
     <!-- mobil meny -->
@@ -101,7 +100,7 @@
         </div>
         <div class="large-4 small-6 columns">
             <div class="align-center">
-                <img src="img/barnehage/trampoline.png" alt="trampoline">
+                <img src="img/barnehage/trampoline.png" alt="trampoline fag">
             </div>
         </div>
     </div>
@@ -117,22 +116,22 @@
     <div class="row menu" id="skoleveienMenu">
         <div class="large-12 columns">
             <div class="row">
-                <div class="large-3 medium-6 small-6 columns barnehageButton">
+                <div class="large-3 medium-6 small-6 columns forste">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/forste.png" alt="1-2 klasse meny">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-6 columns skoleveienButton">
+                <div class="large-3 medium-6 small-6 columns andre">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/andre.png" alt="3-4 klasse meny">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-6 columns kanalSButton">
+                <div class="large-3 medium-6 small-6 columns morsmaal">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/morsmal.png" alt="morsmål meny">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-6 columns MFLButton">
+                <div class="large-3 medium-6 small-6 columns skolestart">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/skolestart.png" alt="skolestart meny">
                     </div>
