--- a/sprint5/Kode/Foundation/index.html
+++ b/sprint5/Kode/Foundation/index.html
@@ -39,7 +39,7 @@
                 <label>Innlogging
                     <input id="userField" type="text" placeholder="Brukernavn" />
                     <input id="passField" type="password" placeholder="Passord" />
-                    <input id="loginBtn" type="button" class="button expand" value="Logg inn"><div class="small-12 columns">
+                    <input id="loginBtn" type="button" class="button expand" value="Logg inn"><div class="small-12 small-12 medium-12 columns">
                     <a class="synlig" href="Barn/barnForside">Alternativ link til barneforside.</a></div>
                 </label>
             </div>
