Lagt til Alt-bildetekster

--- a/sprint5/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint5/Kode/Foundation/Barn/RLE_side.html
@@ -49,12 +49,12 @@
             <div class="row">
                 <div class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
-                        <img src="./img/RLE/logo_liten.png">
+                        <img src="./img/RLE/logo_liten.png" alt="logo">
                     </div>
                 </div>
                 <div class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
-                        <a href="./barnforside.html"><img id="backArrow" src="./img/arrowback.png">
+                        <a href="./barnforside.html"><img id="backArrow" src="./img/arrowback.png" alt="Pil tilbake">
                         </a>
                     </div>
                 </div>
@@ -65,48 +65,48 @@
     <div class="row">
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <img src="img/RLE/jøde.png">
+                <img src="img/RLE/jøde.png" alt="Jødedommenbilde">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <img src="img/RLE/islam.png">
+                <img src="img/RLE/islam.png" alt="Islambilde">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <img src="img/RLE/kristendom.png">
+                <img src="img/RLE/kristendom.png" alt="Kristendombilde">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <a href="hinduisme.html"><img src="img/RLE/hinduisme.png">
+                <a href="hinduisme.html"><img src="img/RLE/hinduisme.png" alt="Hinduismebilde">
                 </a>
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <img src="img/RLE/budd.png">
+                <img src="img/RLE/budd.png" alt="Buddhismebilde">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <img src="img/RLE/sikhisme.png">
+                <img src="img/RLE/sikhisme.png" alt="Sikhismebilde">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <img src="img/RLE/etikk.png">
+                <img src="img/RLE/etikk.png" alt="Etikkbilde">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <img src="img/RLE/kirke.png">
+                <img src="img/RLE/kirke.png" alt="Kirkebilde">
             </div>
         </div>
         <div class="large-4 small-6 columns">
             <div id="align_center" class="align-center">
-                <img src="img/RLE/kunst2.png">
+                <img src="img/RLE/kunst2.png" alt="Kunstbilde">
             </div>
         </div>
     </div>
@@ -115,7 +115,7 @@
     <!-- salaby logo -->
     <div id="footer" class="large-12 columns">
         <div id="footerLogo" class="large-4 columns">
-            <img src="img/logos/salaby_logo_enkel_grå.png">
+            <img src="img/logos/salaby_logo_enkel_grå.png" alt="logo">
         </div>
         <!-- lenker i midten -->
         <div id="footerMid" class="large-6 columns">
@@ -131,10 +131,10 @@
         <!-- sosiale medier -->
         <div id="socialLinks" class="large-2 small-6 columns">
             <a href="https://www.facebook.com/salaby">
-                <img src="img/social/facebook_logo.png">
+                <img src="img/social/facebook_logo.png" alt="Facebooklogo">
             </a>
             <a href="https://www.youtube.com/user/SalabyGyldendal">
-                <img src="img/social/youtube_logo.png">
+                <img src="img/social/youtube_logo.png" alt="Youtubelogo">
             </a>
         </div>
         <a href="#0" class="cd-top">Top</a>
