--- a/sprint5/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint5/Kode/Foundation/Barn/hinduisme.html
@@ -17,7 +17,7 @@
         <nav class="top-bar" data-topbar role="navigation">
             <ul class="title-area">
                 <li class="name">
-                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
+                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
                 </li>
                 <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
                 <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
@@ -46,12 +46,12 @@
 
             <div class="large-3 medium-6 small-6 columns">
                 <div class="menu-option">
-                    <img src="./img/RLE/logo_liten.png">
+                    <img src="./img/RLE/logo_liten.png" alt="logo">
                 </div>
             </div>
             <div class="large-3 medium-6 small-6 columns">
                 <div class="menu-option">
-                    <a href="./RLE_SIDE.html"><img id="backArrow" src="./img/arrowback.png">
+                    <a href="./RLE_SIDE.html"><img id="backArrow" src="./img/arrowback.png" alt="Pil tilbake">
                     </a>
                 </div>
 
@@ -67,22 +67,22 @@
         <div class="row">
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/shiva.png">
+                    <img src="./img/hinduisme/shiva.png" alt="Shiva bilde">
                 </div>
             </div>
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/ganesha.png">
+                    <img src="./img/hinduisme/ganesha.png" alt="Ganesha bilde">
                 </div>
             </div>
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/murugan.png">
+                    <img src="./img/hinduisme/murugan.png" alt="Murugan bilde">
                 </div>
             </div>
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/durga.png">
+                    <img src="./img/hinduisme/durga.png" alt="Durga bilde">
                 </div>
             </div>
         </div>
@@ -90,18 +90,18 @@
         <div class="row">
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/durga.png">
+                    <img src="./img/hinduisme/durga.png" alt="Durga bilde">
                 </div>
             </div>
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/film.png">
+                    <img src="./img/hinduisme/film.png" alt="Film oppgaver-bilde">
                 </div>
             </div>
 
             <div class="large-3 small-6 columns">
                 <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/tegn.png">
+                    <img src="./img/hinduisme/tegn.png" alt="Film med tegnspråk">
                 </div>
             </div>
             <div class="large-3"></div>
@@ -113,7 +113,7 @@
     <!-- Footer -->
     <footer id="footer" class="large-12 columns">
         <div id="footerLogo" class="large-4 columns">
-            <img src="img/logos/salaby_logo_enkel_grå.png">
+            <img src="img/logos/salaby_logo_enkel_grå.png" alt="logo">
         </div>
         <!-- lenker i midten -->
         <div id="footerMid" class="large-6 columns">
@@ -129,10 +129,10 @@
         <!-- sosiale medier -->
         <div id="socialLinks" class="large-2 columns">
             <a href="https://www.facebook.com/salaby">
-                <img src="img/social/facebook_logo.png">
+                <img src="img/social/facebook_logo.png" alt="Facebooklogo">
             </a>
             <a href="https://www.youtube.com/user/SalabyGyldendal">
-                <img src="img/social/youtube_logo.png">
+                <img src="img/social/youtube_logo.png" alt="Facebooklogo">
             </a>
             <a href="#0" class="cd-top">Top</a>
     </footer>
