Lagt inn Alt-bildetekst

--- a/sprint5/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint5/Kode/Foundation/Barn/RLE_side.html
@@ -24,7 +24,7 @@
         <nav class="top-bar" data-topbar role="navigation">
             <ul class="title-area">
                 <li class="name">
-                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png">
+                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
                 </li>
                 <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
                 <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
