--- a/sprint5/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint5/Kode/Foundation/Barn/hinduisme.html
@@ -132,7 +132,7 @@
                 <img src="img/social/facebook_logo.png" alt="Facebooklogo">
             </a>
             <a href="https://www.youtube.com/user/SalabyGyldendal">
-                <img src="img/social/youtube_logo.png" alt="Facebooklogo">
+                <img src="img/social/youtube_logo.png" alt="Youtubelogo">
             </a>
             <a href="#0" class="cd-top">Top</a>
     </footer>
