satte undermenyene for skoleveien til display none

--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -116,22 +116,22 @@
     <div class="row menu" id="skoleveienMenu">
         <div class="large-12 columns">
             <div class="row">
-                <div class="large-3 medium-6 small-6 columns forste">
+                <div id="forste" class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/forste.png" alt="1-2 klasse meny">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-6 columns andre">
+                <div id="andre" class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/andre.png" alt="3-4 klasse meny">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-6 columns morsmaal">
+                <div id="morsmaal" class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/morsmal.png" alt="morsmål meny">
                     </div>
                 </div>
-                <div class="large-3 medium-6 small-6 columns skolestart">
+                <div id="skolestart" class="large-3 medium-6 small-6 columns">
                     <div class="menu-option">
                         <img src="img/undermenySkoleVeien/skolestart.png" alt="skolestart meny">
                     </div>
