--- a/sprint5/Kode/Foundation/Barn/barnForside.html
+++ b/sprint5/Kode/Foundation/Barn/barnForside.html
@@ -18,7 +18,9 @@
         <nav class="top-bar" data-topbar role="navigation">
             <ul class="title-area">
                 <li class="name">
-                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
+                    <a href="../index.html">
+                        <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
+                    </a>
                 </li>
                 <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
                 <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
