--- a/sprint5/Kode/Foundation/Barn/RLE_side.html
+++ b/sprint5/Kode/Foundation/Barn/RLE_side.html
@@ -19,135 +19,148 @@
 </head>
 
 <body>
-    <!--MENU-->
-    <div class="fixed">
-        <nav class="top-bar" data-topbar role="navigation">
-            <ul class="title-area">
-                <li class="name">
-                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
+<!--MENU-->
+<div class="fixed contain-to-grid">
+    <nav class="top-bar" data-topbar role="navigation">
+        <ul class="title-area">
+            <li class="name">
+                <a href="./barnForside.html"><img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo"></a>
+            </li>
+            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+            </li>
+        </ul>
+
+        <section class="top-bar-section">
+            <!-- Right Nav Section -->
+            <ul class="right">
+                <li><a href="#">Lærer/foreldre siden</a>
                 </li>
-                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+                <li><a href="#">Min side</a>
+                </li>
+                <li><a href="#">Logg ut</a>
                 </li>
             </ul>
+        </section>
+    </nav>
+</div>
+<div class="row" id="mainMenu">
 
-            <section class="top-bar-section">
-                <!-- Right Nav Section -->
-                <ul class="right">
-                    <li><a href="#">Lærer/foreldre siden</a>
-                    </li>
-                    <li><a href="#">Min side</a>
-                    </li>
-                    <li><a href="#">Logg ut</a>
-                    </li>
-                </ul>
-            </section>
-        </nav>
+    <div class="large-3 medium-6 small-6 columns">
+        <img src="./img/RLE/logo_liten.png" alt="logo">
     </div>
-    <div class="row" id="mainMenu">
-        <div class="large-12 columns">
-            <div class="row">
-                <div class="large-3 medium-6 small-6 columns">
-                    <div class="menu-option">
-                        <img src="./img/RLE/logo_liten.png" alt="logo">
-                    </div>
-                </div>
-                <div class="large-3 medium-6 small-6 columns">
-                    <div class="menu-option">
-                        <a href="./barnforside.html"><img id="backArrow" src="./img/arrowback.png" alt="Pil tilbake">
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="large-3 medium-6 small-6 columns">
+        <a href="./barnForside.html"><img id="backArrow" src="./img/arrowback.png" alt="Pil tilbake">
+        </a>
+
     </div>
-    <div id="test">
+</div>
+<div class="row">
+    <div class="large-12 columns">
+        <h1 class="fagh">RLE</h1>
+    </div>
+</div>
+
+<div id="test">
+
     <div class="row">
-        <div class="large-4 small-6 columns">
-            <div id="align_center" class="align-center">
-                <img src="img/RLE/jøde.png" alt="Jødedommenbilde">
-            </div>
-        </div>
-        <div class="large-4 small-6 columns">
-            <div id="align_center" class="align-center">
-                <img src="img/RLE/islam.png" alt="Islambilde">
-            </div>
-        </div>
-        <div class="large-4 small-6 columns">
-            <div id="align_center" class="align-center">
-                <img src="img/RLE/kristendom.png" alt="Kristendombilde">
-            </div>
-        </div>
-        <div class="large-4 small-6 columns">
+        <div class="large-3 small-6 medium-4 columns">
             <div id="align_center" class="align-center">
                 <a href="hinduisme.html"><img src="img/RLE/hinduisme.png" alt="Hinduismebilde">
                 </a>
             </div>
         </div>
-        <div class="large-4 small-6 columns">
+        <div class="large-3 small-6 medium-4 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/islam.png" alt="Islambilde">
+            </div>
+        </div>
+        <div class="large-3 small-6 medium-4 columns">
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/kristendom.png" alt="Kristendombilde">
+            </div>
+        </div>
+        <div class="large-3 small-6 medium-4 columns">
+
+            <div id="align_center" class="align-center">
+                <img src="img/RLE/jøde.png" alt="Jødedommenbilde">
+            </div>
+
+        </div>
+        <div class="large-3 small-6 medium-4 columns">
             <div id="align_center" class="align-center">
                 <img src="img/RLE/budd.png" alt="Buddhismebilde">
             </div>
         </div>
-        <div class="large-4 small-6 columns">
+        <div class="large-3 small-6 medium-4 columns">
             <div id="align_center" class="align-center">
                 <img src="img/RLE/sikhisme.png" alt="Sikhismebilde">
             </div>
         </div>
-        <div class="large-4 small-6 columns">
+        <div class="large-3 small-6 medium-4 columns">
             <div id="align_center" class="align-center">
                 <img src="img/RLE/etikk.png" alt="Etikkbilde">
             </div>
         </div>
-        <div class="large-4 small-6 columns">
+        <div class="large-3 small-6 medium-4 columns">
             <div id="align_center" class="align-center">
                 <img src="img/RLE/kirke.png" alt="Kirkebilde">
             </div>
         </div>
-        <div class="large-4 small-6 columns">
+        <div class="large-3 small-6 medium-4 columns">
             <div id="align_center" class="align-center">
                 <img src="img/RLE/kunst2.png" alt="Kunstbilde">
             </div>
         </div>
+        <div class="large-3"></div>
     </div>
-    </div>
-    <!-- FOOTER -->
-    <!-- salaby logo -->
-    <div id="footer" class="large-12 columns">
-        <div id="footerLogo" class="large-4 columns">
-            <img src="img/logos/salaby_logo_enkel_grå.png" alt="logo">
-        </div>
-        <!-- lenker i midten -->
-        <div id="footerMid" class="large-6 columns">
-            <ul>
-                <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
-                </li>
-                <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
-                </li>
-                <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
-                </li>
-            </ul>
-        </div>
-        <!-- sosiale medier -->
-        <div id="socialLinks" class="large-2 small-6 columns">
-            <a href="https://www.facebook.com/salaby">
-                <img src="img/social/facebook_logo.png" alt="Facebooklogo">
-            </a>
-            <a href="https://www.youtube.com/user/SalabyGyldendal">
-                <img src="img/social/youtube_logo.png" alt="Youtubelogo">
-            </a>
-        </div>
-        <a href="#0" class="cd-top">Top</a>
-    </div>
-    <!-- FOOTER SLUTT -->
+</div>
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/foundation.min.js"></script>
-    <script src="js/menuHeadScript.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-    $(document).foundation();
-    </script>
+<!-- Footer -->
+
+<footer id="footer">
+    <div class="row">
+        <div class="large-4 columns">
+            <div id="footerLogo">
+                <img src="img/logos/salaby_logo_enkel_grå.png" alt="logo">
+            </div>
+        </div>
+
+        <div class="large-6 columns">
+            <div id="footerMid">
+                <ul>
+                    <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
+                    </li>
+                    <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
+                    </li>
+                    <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="large-2 columns">
+            <div id="socialLinks">
+                <a href="https://www.facebook.com/salaby">
+                    <img src="img/social/facebook_logo.png" alt="Facebooklogo">
+                </a>
+                <a href="https://www.youtube.com/user/SalabyGyldendal">
+                    <img src="img/social/youtube_logo.png" alt="Youtubelogo">
+                </a>
+            </div>
+        </div>
+    </div>
+    <a href="#0" class="cd-top">Top</a>
+</footer>
+
+<!-- FOOTER SLUTT -->
+
+<script src="js/vendor/jquery.js"></script>
+<script src="js/foundation.min.js"></script>
+<script src="js/main.js"></script>
+<script>
+$(document).foundation();
+</script>
 </body>
 
 </html>
