--- a/sprint5/Kode/Foundation/Barn/hinduisme.html
+++ b/sprint5/Kode/Foundation/Barn/hinduisme.html
@@ -12,140 +12,145 @@
 
 <body>
 
-    <!--MENU-->
-    <div class="fixed">
-        <nav class="top-bar" data-topbar role="navigation">
-            <ul class="title-area">
-                <li class="name">
-                    <img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
+<!--MENU-->
+<header>
+<div class="fixed contain-to-grid">
+
+    <nav class="top-bar" data-topbar role="navigation">
+
+        <ul class="title-area">
+            <li class="name">
+                <a href="./barnForside.html"><img id="siteLogo" src="img/logos/salaby_logo_enkel_rød.png" alt="logo">
+                </a>
+            </li>
+            <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
+            <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+            </li>
+        </ul>
+
+        <section class="top-bar-section">
+            <!-- Right Nav Section -->
+            <ul class="right">
+                <li><a href="../voksen/voksenForside.html">Lærer/foreldre siden</a>
                 </li>
-                <!-- Remove the class "menu-icon" to get rid of menu icon. Take out "Menu" to just have icon alone -->
-                <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a>
+                <li><a href="#">Min side</a>
+                </li>
+                <li><a href="#">Logg ut</a>
                 </li>
             </ul>
+        </section>
+    </nav>
+</div>
+</header>
 
-            <section class="top-bar-section">
-                <!-- Right Nav Section -->
-                <ul class="right">
-                    <li><a href="../voksen/voksenForside.html">Lærer/foreldre siden</a>
-                    </li>
-                    <li><a href="#">Min side</a>
-                    </li>
-                    <li><a href="#">Logg ut</a>
-                    </li>
-                </ul>
-            </section>
-        </nav>
+
+
+<section id="test">
+
+    <div class="row" id="mainMenu">
+
+        <div class="large-3 medium-6 small-6 columns">
+            <img src="./img/RLE/logo_liten.png" alt="logo">
+        </div>
+        <div class="large-3 medium-6 small-6 columns">
+            <a href="./RLE_SIDE.html"><img id="backArrow" src="./img/arrowback.png" alt="Pil tilbake">
+            </a>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="large-12 columns">
+            <h1 class="fagh">HINDUISME</h1>
+        </div>
     </div>
 
 
-
-    <section id="test">
-
-        <div class="row" id="mainMenu">
-
-            <div class="large-3 medium-6 small-6 columns">
-                <div class="menu-option">
-                    <img src="./img/RLE/logo_liten.png" alt="logo">
-                </div>
-            </div>
-            <div class="large-3 medium-6 small-6 columns">
-                <div class="menu-option">
-                    <a href="./RLE_SIDE.html"><img id="backArrow" src="./img/arrowback.png" alt="Pil tilbake">
-                    </a>
-                </div>
-
+    <div class="row">
+        <div class="large-3 small-6 medium-4 columns">
+            <div class="align-center" id="align_center">
+                <img src="./img/hinduisme/shiva.png" alt="Shiva bilde">
             </div>
         </div>
-        <div class="row">
-            <div class="large-12">
-                <h1 class="fagh">HINDUISME</h1>
+        <div class="large-3 small-6 medium-4 columns">
+            <div class="align-center" id="align_center">
+                <img src="./img/hinduisme/ganesha.png" alt="Ganesha bilde">
+            </div>
+        </div>
+        <div class="large-3 small-6 medium-4 columns">
+            <div class="align-center" id="align_center">
+                <img src="./img/hinduisme/murugan.png" alt="Murugan bilde">
+            </div>
+        </div>
+        <div class="large-3 small-6 medium-4 columns">
+            <div class="align-center" id="align_center">
+                <img src="./img/hinduisme/durga.png" alt="Durga bilde">
             </div>
         </div>
 
 
-        <div class="row">
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/shiva.png" alt="Shiva bilde">
-                </div>
-            </div>
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/ganesha.png" alt="Ganesha bilde">
-                </div>
-            </div>
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/murugan.png" alt="Murugan bilde">
-                </div>
-            </div>
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/durga.png" alt="Durga bilde">
-                </div>
+        <div class="large-3 small-6 medium-4 columns">
+            <div class="align-center" id="align_center">
+                <img src="./img/hinduisme/film.png" alt="Film oppgaver-bilde">
             </div>
         </div>
 
-        <div class="row">
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/durga.png" alt="Durga bilde">
-                </div>
+        <div class="large-3 small-6 medium-4 columns">
+            <div class="align-center" id="align_center">
+                <img src="./img/hinduisme/tegn.png" alt="Film med tegnspråk">
             </div>
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/film.png" alt="Film oppgaver-bilde">
-                </div>
+        </div>
+        <div class="large-3"></div>
+
+    </div>
+
+    </div>
+</section>
+<!-- Footer -->
+
+
+<footer id="footer">
+    <div class="row">
+        <div class="large-4 columns">
+            <div id="footerLogo">
+                <img src="img/logos/salaby_logo_enkel_grå.png" alt="logo">
             </div>
+        </div>
 
-            <div class="large-3 small-6 columns">
-                <div class="align-center" id="align_center">
-                    <img src="./img/hinduisme/tegn.png" alt="Film med tegnspråk">
-                </div>
+        <div class="large-6 columns">
+            <div id="footerMid">
+                <ul>
+                    <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
+                    </li>
+                    <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
+                    </li>
+                    <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
+                    </li>
+                </ul>
             </div>
-            <div class="large-3"></div>
-
         </div>
 
+        <div class="large-2 columns">
+            <div id="socialLinks">
+                <a href="https://www.facebook.com/salaby">
+                    <img src="img/social/facebook_logo.png" alt="Facebooklogo">
+                </a>
+                <a href="https://www.youtube.com/user/SalabyGyldendal">
+                    <img src="img/social/youtube_logo.png" alt="Youtubelogo">
+                </a>
+            </div>
         </div>
-    </section>
-    <!-- Footer -->
-    <footer id="footer" class="large-12 columns">
-        <div id="footerLogo" class="large-4 columns">
-            <img src="img/logos/salaby_logo_enkel_grå.png" alt="logo">
-        </div>
-        <!-- lenker i midten -->
-        <div id="footerMid" class="large-6 columns">
-            <ul>
-                <li><a href="http://www.gyldendal.no/">© Gyldendal Norsk Forlag</a>
-                </li>
-                <li><a href="http://web3.gyldendal.no/support/specification/salaby">Systemkrav</a>
-                </li>
-                <li><a href="http://web3.gyldendal.no/support/contact/salaby">Send tilbakemelding</a>
-                </li>
-            </ul>
-        </div>
-        <!-- sosiale medier -->
-        <div id="socialLinks" class="large-2 columns">
-            <a href="https://www.facebook.com/salaby">
-                <img src="img/social/facebook_logo.png" alt="Facebooklogo">
-            </a>
-            <a href="https://www.youtube.com/user/SalabyGyldendal">
-                <img src="img/social/youtube_logo.png" alt="Youtubelogo">
-            </a>
-            <a href="#0" class="cd-top">Top</a>
-    </footer>
+    </div>
+    <a href="#0" class="cd-top">Top</a>
+</footer>
 
-    <!-- FOOTER SLUTT -->
+<!-- FOOTER SLUTT -->
 
-    <script src="./js/vendor/jquery.js"></script>
-    <script src="./js/foundation.min.js"></script>
-    <script src="./js/menuHeadScript.js"></script>
-    <script src="js/main.js"></script>
-    <script>
-    $(document).foundation();
-    </script>
+<script src="./js/vendor/jquery.js"></script>
+<script src="./js/foundation.min.js"></script>
+<script src="js/main.js"></script>
+<script>
+$(document).foundation();
+</script>
 </body>
 
 </html>
