--- a/sprint5/Kode/Foundation/Voksen/kompetanse.html
+++ b/sprint5/Kode/Foundation/Voksen/kompetanse.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Forside Barn</title>
+    <title>Salaby | Kompetansemål</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <link rel="stylesheet" href="css/styleVoksen.css" />
     <link rel="stylesheet" href="css/styleKompetanse.css" />
