--- a/Salabytest/public/422.html
+++ b/Salabytest/public/422.html
@@ -51,17 +51,17 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+
   </style>
 </head>
 
 <body>
-  <!-- This file lives in public/422.html -->
+
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <h1>Endringene du ønsket ble refusert</h1>
+      <p>Du har trolig ikke adgang til dette området</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
   </div>
 </body>
 </html>
